# onnx2flt

./: .gitignore  CMakeLists.txt  README.md  context.hh  main.cc  nodemap.cc  nodemap.hh  noderemap.cc  noderemap.hh
cmake/: onnx.cmake
fbs/: CMakeLists.txt  gnt.fbs  gnt_generated.h
